# stac-optimizer

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.ko.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/benchmark/: research_benchmark.json
docs/en/: optimizer.md
docs/ko/: optimizer.md
examples/: research_benchmark.py  toy_benchmark.py
src/stac_optimizer/: __init__.py  stac.py
tests/: test_stac.py  test_stac_cuda_integration.py
