[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-optimizer"
dynamic = ["version"]
description = "STAC optimizer with sign-based early-layer updates and AdamW on the last N trainable layers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["torch>=2.10"]
keywords = ["pytorch", "optimizer", "signsgd", "adamw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/smturtle2/stac-optimizer"
Repository = "https://github.com/smturtle2/stac-optimizer"
Issues = "https://github.com/smturtle2/stac-optimizer/issues"
"README (Korean)" = "https://github.com/smturtle2/stac-optimizer/blob/main/README.ko.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "matplotlib>=3.10",
  "pytest>=8.3",
  "setuptools-scm>=8",
  "twine>=6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "cuda: requires a CUDA device",
  "slow: slower integration-style coverage",
]
pythonpath = ["src"]
