[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-optimizer"
dynamic = ["version"]
description = "STAC optimizer with a state-free sign trunk and AdamW on the final trainable-module tail."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = ["torch>=2.10"]
authors = [{name = "smturtle2"}]
maintainers = [{name = "smturtle2"}]
keywords = ["pytorch", "optimizer", "signsgd", "adamw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/smturtle2/stac-optimizer"
Repository = "https://github.com/smturtle2/stac-optimizer"
Issues = "https://github.com/smturtle2/stac-optimizer/issues"
"Documentation" = "https://github.com/smturtle2/stac-optimizer/blob/main/docs/en/optimizer.md"
"Documentation (Korean)" = "https://github.com/smturtle2/stac-optimizer/blob/main/docs/ko/optimizer.md"
"Benchmark JSON" = "https://github.com/smturtle2/stac-optimizer/blob/main/docs/benchmark/research_benchmark.json"
"Benchmark Plot" = "https://raw.githubusercontent.com/smturtle2/stac-optimizer/main/docs/benchmark/research_benchmark.png"
"README (Korean)" = "https://github.com/smturtle2/stac-optimizer/blob/main/README.ko.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "matplotlib>=3.10",
  "pytest>=8.3",
  "setuptools-scm>=8",
  "twine>=6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "cuda: requires a CUDA device",
  "slow: slower integration-style coverage",
]
pythonpath = ["src"]
